[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Sprite/wizard 4.png" type="Texture" id=1]
[ext_resource path="res://Player/Sprite/wizard 1.png" type="Texture" id=2]
[ext_resource path="res://Player/Sprite/wizard 3.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprite/wizard 2.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Hit-Hurtboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hit-Hurtboxes/Soft Collision.tscn" type="PackedScene" id=7]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform bool is_white = false;


void fragment() {
	vec4 prev_colour = texture(TEXTURE, UV);
	vec4 white_colour = vec4(1.0, 1.0, 1.0, prev_colour.a);

	vec4 new_colour = prev_colour;

	if (is_white) {
		new_colour = white_colour;
	}
	COLOR = new_colour;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/is_white = false

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 6.0

[sub_resource type="Animation" id=7]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/is_white")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/is_white")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.0
height = 6.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 5 )
MAX_SPEED = 60

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
position = Vector2( 1, -1 )
scale = Vector2( 0.017, 0.017 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Basic shot timer" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 7 )
anims/Stop = SubResource( 8 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 9 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[connection signal="timeout" from="Basic shot timer" to="." method="basic_shot"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hurtbox"]
[editable path="SoftCollision"]
